# mcts_traffic_analytics_demo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/curated/: accidents.csv  model_df.csv  roads.csv  sensors.csv  violations.csv
data/staged/: accidents.csv  sensors.csv  violations.csv  weather.csv
docs/: analytics_standards.md  architecture_overview.md  data_dictionary.md  executive_presentation_playbook.md  governance.md  how_to_show_in_powerbi.md  job_role_coverage.md  kpi_catalog.md  ministerial_committee_alignment.md  saudi_compliance_reference.md  story_one_pager.md
docs/assets/: README.md
powerbi/: README.md
powerbi/tabular_editor/: add_measures.csx  relationships.json
scripts/: generate_data_dictionary.py
src/traffic_analytics_demo/: artifacts.py  cli.py  config.py  data_gen.py  diagnostics.py  ingest.py  model.py  ops.py  powerbi_export.py  quality.py  report.py  scenario.py  stakeholder_pack.py  transform.py  utils.py
src/traffic_analytics_demo/ai/: service.py
src/traffic_analytics_demo/ai/providers/: base.py  local_gateway_provider.py  mock_provider.py
tests/: conftest.py  test_ai_service.py  test_app_import.py  test_cli_runtime.py  test_config.py  test_data_dictionary.py  test_pipeline_integration.py  test_quality.py  test_stakeholder_pack.py  test_streamlit_app.py
