[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-analytics-demo"
version = "0.1.0"
description = "Governed traffic safety analytics demo for executive reporting and Power BI delivery"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "streamlit>=1.31",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
traffic-analytics-demo = "traffic_analytics_demo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning:dateutil.tz.tz",
]
