[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-analytics-demo"
version = "0.1.1"
description = "Governed traffic safety analytics demo for executive reporting and Power BI delivery"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "streamlit>=1.31",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0", "mypy>=1.9", "pip-audit>=2.7"]

[project.scripts]
traffic-analytics-demo = "traffic_analytics_demo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning:dateutil.tz.tz",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter where possible
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]          # assert is fine in tests
"app/streamlit_app.py" = ["E402"]  # sys.path must be set before package imports

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
